// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectInput /> > should have some hintText 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
    <p
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 typography_common__yhjp33f sprinkles_fontSize_2__onxwju5u sprinkles_lineHeight_2__onxwju5l sprinkles_fontWeight_normal__onxwju62 typography_color_unset__yhjp33e elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 sprinkles_marginTop_1_mobile__onxwjuzr HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
    >
      hint text
    </p>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when active 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_activeBorderColour__a2a1mv1"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_activeBorderColour__a2a1mv1"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_block_mobile__onxwju6v NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz InputState_activeColour__a2a1mv0 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_activeBorderColour__a2a1mv1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and invalid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and valid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_success_default_borderColour__a2a1mv7"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_success_default_borderColour__a2a1mv7"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_success_default_borderColour__a2a1mv7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with custom icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn input-class"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          />
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with prefix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjufn input-class"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_position_relative_mobile__onxwju8z sprinkles_width_full_mobile__onxwjufn NotchedBase_root__1ft8sxl0"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjue3 sprinkles_width_full_mobile__onxwjufn"
      >
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_prefixIcon__5jmdy8k withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_position_relative_mobile__onxwju8z sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexWrap_nowrap_mobile__onxwjupf sprinkles_justifyContent_center_mobile__onxwjumz"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuoz SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwju5g sprinkles_width_full_mobile__onxwjufn sprinkles_position_relative_mobile__onxwju8z sprinkles_display_flex_mobile__onxwju73 sprinkles_borderRadius_md_mobile__onxwjuab withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8d"
          />
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_alignItems_center_mobile__onxwjulb sprinkles_flexShrink_0_mobile__onxwjup7 sprinkles_marginRight_4_mobile__onxwjuyv SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6v Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6v sprinkles_width_full_mobile__onxwjufn sprinkles_height_full_mobile__onxwjue3"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju73 sprinkles_height_full_mobile__onxwjue3 sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 sprinkles_width_full_mobile__onxwjufn sprinkles_textAlign_left_mobile__onxwju9f NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwjusz sprinkles_paddingRight_2_mobile__onxwjuu3 sprinkles_display_none_mobile__onxwju6r NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwjusr sprinkles_paddingLeft_none_mobile__onxwjutv sprinkles_paddingRight_none_mobile__onxwjuuz sprinkles_paddingTop_none_mobile__onxwjuw3 sprinkles_marginBottom_none_mobile__onxwjux7 sprinkles_marginLeft_none_mobile__onxwjuyb sprinkles_marginRight_none_mobile__onxwjuzj sprinkles_marginTop_none_mobile__onxwju10r sprinkles_display_inline_mobile__onxwju7b sprinkles_pointerEvents_none__onxwju6m sprinkles_position_absolute_mobile__onxwju93 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl10 NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxl16"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;
